[gd_scene load_steps=5 format=3 uid="uid://j8r4ftteu4y0"]

[ext_resource type="Script" path="res://enemy/cardEnemy.gd" id="1_b6kuk"]
[ext_resource type="PackedScene" uid="uid://thd0d3hktn3w" path="res://player/cardTexture.tscn" id="3_pevk1"]
[ext_resource type="AudioStream" uid="uid://damdd8n53qx3w" path="res://audio/hit2.wav" id="3_s61ge"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oh4ta"]
size = Vector2(158, 154)

[node name="CardEnemy" type="Node2D"]
position = Vector2(0, -3)
script = ExtResource("1_b6kuk")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(81, 79)
shape = SubResource("RectangleShape2D_oh4ta")

[node name="CardTexture" parent="." instance=ExtResource("3_pevk1")]
position = Vector2(80, 82)
scale = Vector2(1.255, 1.255)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_s61ge")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
